--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,11 @@
 body {
-  color: red;
-  text-align: center;
+  color: black;
+  text-align: justify;
   font-family: "Franklin Gothic Medium";
-  font-size: x-large;
+  font-size: x-small;
+}
+#cabeza {
+  color: green;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: medium;
 }
