ajustes antes de hacer merge con master

--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,18 @@
 body {
-  color: black;
+  color: rgb(255, 0, 0);
   text-align: justify;
   font-family: "Franklin Gothic Medium";
   font-size: x-small;
 }
+
 #cabeza {
   color: green;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: medium;
+  text-align: center;
+}
+
+#saludos {
+  color: blue;
+  text-align: right;
 }
