--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
 body {
+  background: darkcyan;
   color: rgb(255, 0, 0);
   text-align: justify;
   font-family: "Franklin Gothic Medium";
@@ -6,10 +7,14 @@ body {
 }
 
 #cabeza {
-  color: green;
+  color: crimson;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: medium;
+  font-weight: lighter;
   text-align: center;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+  margin: 0;
+  padding: 0.3em;
 }
 
 #saludos {
